@@ -6,26 +6,28 @@ package com.softwaremagico.kt.pdf.lists;
  * %%
  * Copyright (C) 2021 - 2023 Softwaremagico
  * %%
- * This software is designed by Jorge Hortelano Otero. Jorge Hortelano Otero
- * <softwaremagico@gmail.com> Valencia (Spain).
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
- *
- * You should have received a copy of the GNU General Public License along with
- * this program; If not, see <http://www.gnu.org/licenses/gpl-3.0.html>.
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * #L%
  */
 
 
-import com.lowagie.text.*;
+import com.lowagie.text.Document;
+import com.lowagie.text.Element;
+import com.lowagie.text.Font;
+import com.lowagie.text.PageSize;
+import com.lowagie.text.Paragraph;
+import com.lowagie.text.Rectangle;
 import com.lowagie.text.pdf.BaseFont;
 import com.lowagie.text.pdf.PdfPCell;
 import com.lowagie.text.pdf.PdfPTable;
@@ -46,12 +48,12 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Gets the list of fights to be shown on a tournament. This list can be printed before the start of the tournament.
  */
 public class FightsList extends ParentList {
+    private static final float[] TABLE_WITH = {0.40f, 0.10f, 0.40f};
 
     private final MessageSource messageSource;
     private final Locale locale;
@@ -63,7 +65,7 @@ public class FightsList extends ParentList {
         this.messageSource = messageSource;
         this.locale = locale;
         this.tournamentDto = tournament;
-        this.fights = groups.stream().flatMap(groupDTO -> groupDTO.getFights().stream()).collect(Collectors.toList());
+        this.fights = groups.stream().flatMap(groupDTO -> groupDTO.getFights().stream()).toList();
         this.groups = groups;
     }
 
@@ -99,7 +101,7 @@ public class FightsList extends ParentList {
 
         for (int i = 0; i < tournamentDto.getShiaijos(); i++) {
             final int shiaijo = i;
-            final List<FightDTO> fights = this.fights.stream().filter(fightDTO -> fightDTO.getShiaijo().equals(shiaijo)).collect(Collectors.toList());
+            final List<FightDTO> fights = this.fights.stream().filter(fightDTO -> fightDTO.getShiaijo().equals(shiaijo)).toList();
             mainTable.addCell(getEmptyRow());
             mainTable.addCell(getEmptyRow());
             mainTable.addCell(getHeader2(
@@ -108,7 +110,7 @@ public class FightsList extends ParentList {
             for (final FightDTO fight : fights) {
                 cell = new PdfPCell(fightTable(fight));
                 cell.setBorderWidth(BORDER_WIDTH);
-                cell.setColspan(3);
+                cell.setColspan(TABLE_WITH.length);
                 cell.setBackgroundColor(BaseColor.WHITE);
                 mainTable.addCell(cell);
             }
@@ -124,7 +126,7 @@ public class FightsList extends ParentList {
         for (int level = 0; level <= levels; level++) {
             final Integer currentLevel = level;
             final List<GroupDTO> groupsOfLevel = groups.stream().filter(groupDTO -> Objects.equals(groupDTO.getLevel(), currentLevel))
-                    .collect(Collectors.toList());
+                    .toList();
             if (groupsOfLevel.stream().anyMatch(groupDTO -> !groupDTO.getFights().isEmpty())) {
                 /*
                  * Header of the phase
@@ -153,7 +155,7 @@ public class FightsList extends ParentList {
                         if (groupsOfLevel.get(i).getFights().contains(fight)) {
                             cell = new PdfPCell(fightTable(fight));
                             cell.setBorderWidth(BORDER_WIDTH);
-                            cell.setColspan(3);
+                            cell.setColspan(TABLE_WITH.length);
                             cell.setBackgroundColor(BaseColor.WHITE);
                             cell.setHorizontalAlignment(Element.ALIGN_LEFT);
                             mainTable.addCell(cell);
@@ -176,7 +178,7 @@ public class FightsList extends ParentList {
 
     @Override
     public float[] getTableWidths() {
-        return new float[]{0.40f, 0.10f, 0.40f};
+        return TABLE_WITH;
     }
 
     @Override
@@ -184,7 +186,7 @@ public class FightsList extends ParentList {
         mainTable.getDefaultCell().setHorizontalAlignment(Element.ALIGN_CENTER);
         mainTable.getDefaultCell().setBorder(TABLE_BORDER);
         mainTable.getDefaultCell().setBorderColor(BaseColor.BLACK);
-        mainTable.setWidthPercentage(100);
+        mainTable.setWidthPercentage(TOTAL_WIDTH);
     }
 
     @Override
@@ -195,6 +197,7 @@ public class FightsList extends ParentList {
         cell.setBorderWidth(HEADER_BORDER);
         cell.setHorizontalAlignment(Element.ALIGN_CENTER);
         cell.setVerticalAlignment(Element.ALIGN_MIDDLE);
+        cell.setMinimumHeight(MIN_HEADER_HIGH);
         mainTable.addCell(cell);
     }
 
